test/e2e/testdata/client-ip-detection-external-address.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: ClientTrafficPolicy
metadata:
  name: client-ip-detection-external-address-ctp
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: same-namespace
  clientIPDetection:
    xForwardedFor:
      numTrustedHops: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-with-client-ip-detection-external-address
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /client-ip-detection-external-address
      backendRefs:
        - name: infra-backend-v1
          port: 8080
